--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -2277,6 +2277,8 @@
     "workshop.voidEnergy.desc": "Energy Rifts are even more effective at storing resources.",
     "workshop.voidReactors.label": "Void Reactors",
     "workshop.voidReactors.desc": "Your Research Vessels are ~116% more effective",
+	"workshop.zebraUpgrade.bloodstoneInstitute.label": "Bloodstone Institute",
+	"workshop.zebraUpgrade.bloodstoneInstitute.desc": "Foggy memory of finding it. Zebra workshops increase chance to find Bloodstones in hunts",
     "workshop.zebraUpgrade.darkBrew.label": "Dark Brew",
     "workshop.zebraUpgrade.darkBrew.desc": "Festivals also boosts chance of zebra arrival.",
     "workshop.zebraUpgrade.darkRevolution.label": "Dark Revolution",
