--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1071,6 +1071,7 @@
     "res.stack.weather": "Weather",
     "res.stack.zebraRelationsAppeasementPenalty": "Zebra relations appeasement penalty",
     "res.toCap": "To cap",
+    "res.toNextKitten": "To next kitten",
     "res.toNextNecrocorn": "To next necrocorn",
     "res.toZero": "To zero",
     "res.show.hidden": "Show hidden resources",
