--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -762,6 +762,8 @@
     "policy.rationing.desc": "Stoic philosophers encourage restraint and saving, making hunting more effective and reducing the effect of happiness on catnip consumption.",
     "policy.republic.label" : "Republic",
     "policy.republic.desc" : "Best for large societies. Highly promoted leaders will provide a small bonus to the production of all kittens.",
+    "policy.siphoning.label" : "Siphoning",
+    "policy.siphoning.desc" : "Pacts consume alicorns and slow down production instead of consuming necrocorns. If there is not enough of either pacts also consume necrocorns.",
     "policy.socialism.label" : "Socialism",
     "policy.socialism.desc" : "Has no effect",
     "policy.spaceBasedTerraforming.label" : "Space-based terraforming",
