update how necrocorn siphoning works

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1031,6 +1031,8 @@
     "res.stack.boost": "Boost",
     "res.stack.buildings": "Buildings",
     "res.stack.corruptionPerDay": "Corruption",
+    "res.stack.corruptionPerDayProduction": "Corruption production",
+    "res.stack.corruptionPerDaySiphoned": "Siphoning consumption",
     "res.stack.policy": "Policy",
     "res.stack.pollution": "Pollution",
     "res.stack.convCons": "Conversion Consumption",
