lang merge script

--- a/res/i18n/crowdin/ko.json
+++ b/res/i18n/crowdin/ko.json
@@ -1546,7 +1546,7 @@
     "village.btn.unassign.job": "직업 임명 취소",
     "village.btn.unwrap": "선물 상자 열기",
     "village.btn.unwrap.confirmation.msg": "선물 상자를 개봉하시겠습니까? 조금 더 기다리면 더 좋은 보상이 될 수도 있습니다.",
-    "village.census.age": "세",
+    "village.census.age": "살",
     "village.census.filter.all": "전체 직업",
     "village.census.lbl.festival.duration": "남은 축제 기간",
     "village.census.lbl.happiness": "행복도",
