--- a/res/i18n/crowdin/fr.json
+++ b/res/i18n/crowdin/fr.json
@@ -208,8 +208,8 @@
     "buildings.workshop.label": "Atelier",
     "buildings.workshop.desc": "Permet de fabriquer des matériaux et d'améliorer de nombreuses choses. Augmente l'efficacité de la fabrication de 6%.",
     "buildings.workshop.flavor": "Jouets gratuits pour les employés.",
-    "buildings.zebraForge.label": "얼룩말 대장간",
-    "buildings.zebraForge.desc": "블러드 스톤의 공예와 T-미스릴을 해금합니다.",
+    "buildings.zebraForge.label": "Forge Zèbre",
+    "buildings.zebraForge.desc": "Débloque la fabrication de pierres de sang et de t-mythril",
     "buildings.zebraOutpost.label": "Avant-poste Zèbre",
     "buildings.zebraOutpost.desc": "Fournit une base d'expéditions de chasse. Chaque niveau d'amélioration améliore l'efficacité des expéditions de 5%",
     "buildings.zebraWorkshop.label": "Atelier Zèbre",
@@ -270,7 +270,7 @@
     "challendge.atheism.desc": "Recommence une partie sans bonus de foi.<br /><br />Objectif : réinitialisez avec au moins une chambre cryogénique.",
     "challendge.atheism.effect.desc": "Chaque niveau de transcendance augmentera le bonus de Réforme de 10%.",
     "challendge.blackSky.label": "Ciel Obscur",
-    "challendge.blackSky.desc": "다음의 페널티를 보유한 채로 게임을 초기화 합니다: 천체 관측 현상 제거<br><br>목표: 우주 송신소 건설",
+    "challendge.blackSky.desc": "Recommence le jeu sans événements astronomiques à observer.<br><br>Objectif: Construire une Balise Spatiale. (+1 Balise par complétion.)",
     "challendge.blackSky.effect.desc": "Les Anciens arrivent plus tôt.",
     "challendge.blackSky.event": "La nuit est noire, aucune étoile à observer.",
     "challendge.energy.label": "Energie",
@@ -293,7 +293,7 @@
     "challendge.btn.name.complete": "{0} (achevé(s))",
     "challendge.btn.name.current": "{0} (진행중)",
     "common.collapse.all": "Tout réduire",
-    "common.expand.all": "전체 확장하기",
+    "common.expand.all": "Tout développer",
     "common.warning": " <span class='genericWarning'>(!)</span>",
     "cycle.effects.title": "순환 효과",
     "cycle.effects.festival.title": "정기 축제 효과:",
@@ -312,8 +312,8 @@
     "effectsMgr.statics.biofuelRatio.title": "Bonus de Carburant Bio",
     "effectsMgr.statics.blackLibraryBonus.title": "Bonus de Bibliothèque Noire",
     "effectsMgr.statics.blsCorruptionRatio.title": "Bonus de corruption CNL",
-    "effectsMgr.statics.blsLimit.title": "검은 비애 한도",
-    "effectsMgr.statics.blsProductionBonus.title": "검은 비애 생산 보너스",
+    "effectsMgr.statics.blsLimit.title": "Tristesse liquide maximum",
+    "effectsMgr.statics.blsProductionBonus.title": "Bonus de production de tristesse liquide",
     "effectsMgr.statics.boostFromLeader.title": "Boost du leader",
     "effectsMgr.statics.broadcastTowerRatio.title": "Bonus de tour de radiodiffusion",
     "effectsMgr.statics.cadBlueprintCraftRatio.title": "Bonus de fabrication de schémas",
@@ -327,11 +327,11 @@
     "effectsMgr.statics.challengeHappiness.title": "행복도",
     "effectsMgr.statics.coalRatioGlobal.title": "Pénalité de production de charbon",
     "effectsMgr.statics.coalRatioGlobalReduction.title": "Réduction de la pénalité de production de charbon",
-    "effectsMgr.statics.coalSuperRatio.title": "석탄 보너스",
-    "effectsMgr.statics.coldChance.title": "추위 확률",
-    "effectsMgr.statics.coldHarshness.title": "추운 겨울 캣닢 생산량 감소",
-    "effectsMgr.statics.communismProductionBonus.title": "공산주의 생산 보너스",
-    "effectsMgr.statics.compendiaTTBoostRatio.title": "고문서 레비아타니아우스 보너스",
+    "effectsMgr.statics.coalSuperRatio.title": "Bonus de charbon",
+    "effectsMgr.statics.coldChance.title": "Chance d'Hiver froid",
+    "effectsMgr.statics.coldHarshness.title": "Réduction de l'herbe pendant les hivers froids",
+    "effectsMgr.statics.communismProductionBonus.title": "Bonus de Production du Communisme",
+    "effectsMgr.statics.compendiaTTBoostRatio.title": "Bonus de Codex Léviathanianus",
     "effectsMgr.statics.corruptionBoostRatio.title": "Bonus de corruption",
     "effectsMgr.statics.corruptionBoostRatioChallenge.title": "Boost de corruption",
     "effectsMgr.statics.corruptionRatio.title": "Ratio de corruption",
@@ -363,9 +363,9 @@
     "effectsMgr.statics.environmentMineralBonus.title": "Production de minerai",
     "effectsMgr.statics.environmentUnhappiness.title": "Malheur",
     "effectsMgr.statics.environmentWoodBonus.title": "Production de bois",
-    "effectsMgr.statics.expansionismUnobtainiumProductionBonus.title": "언옵타늄 생산 보너스",
+    "effectsMgr.statics.expansionismUnobtainiumProductionBonus.title": "Bonus de production d'Unobtainium",
     "effectsMgr.statics.factoryCostReduction.title": "Réduction du coût des usines",
-    "effectsMgr.statics.factoryRefineRatio.title": "공장 정제 보너스",
+    "effectsMgr.statics.factoryRefineRatio.title": "Bonus de raffinement des usines",
     "effectsMgr.statics.faithRatioReligion.title": "Bonus de foi",
     "effectsMgr.statics.festivalRatio.title": "Effets du festival",
     "effectsMgr.statics.festivalArrivalRatio.title": "축제 성장률",
@@ -388,9 +388,9 @@
     "effectsMgr.statics.hutPriceRatio.title": "오두막 가격 차감",
     "effectsMgr.statics.hydroPlantRatio.title": "수력 발전기 보너스",
     "effectsMgr.statics.hydrofracturer-oilPerTickAutoprodSpace.title": "Fracturateur hydraulique - Conversion de Pétrole",
-    "effectsMgr.statics.hydroponics-catnipRatio.title": "수경재배 - 캣닢 보너스",
-    "effectsMgr.statics.ivoryMeteorChance.title": "상아 운석 확률",
-    "effectsMgr.statics.ivoryMeteorRatio.title": "상아 운석 보너스",
+    "effectsMgr.statics.hydroponics-catnipRatio.title": "Hydroponique - Bonus d'herbe à chat",
+    "effectsMgr.statics.ivoryMeteorChance.title": "Chance de météore d'ivoire",
+    "effectsMgr.statics.ivoryMeteorRatio.title": "Bonus de météores d'ivoire",
     "effectsMgr.statics.kittenGrowthRatio.title": "Taux de naissance des chatons",
     "effectsMgr.statics.kittenLaziness.title": "고양이 게으름",
     "effectsMgr.statics.leviathansEnergyModifier.title": "레비아탄 에너지 최대",
@@ -618,8 +618,8 @@
     "policy.communism.desc": "Industrialisation à tout prix. Augmente la production de charbon, de fer et de titane, et réduit le coût des Usines.",
     "policy.conservation.label": "Conservateur",
     "policy.conservation.desc": "Protéger activement l'environnement, augmentant le bonheur lié à l'environnement.",
-    "policy.culturalExchange.label": "문화 교류",
-    "policy.culturalExchange.desc": "시인과 배우들이 외국으로 여행을 떠납니다. 문화 생산량이 약간 증가합니다.",
+    "policy.culturalExchange.label": "Echange culturel",
+    "policy.culturalExchange.desc": "Vos poètes et acteurs voyageront dans des pays étrangers, augmentant légèrement les revenus de la culture.",
     "policy.diplomacy.label": "Diplomacie",
     "policy.diplomacy.desc": "다른 부족과 좋은 관계를 구축합니다. 무역에 필요한 묘력이 감소합니다.",
     "policy.environmentalism.label": "Écologie",
@@ -663,11 +663,11 @@
     "policy.spaceBasedTerraforming.label": "우주 기반 테라포밍",
     "policy.spaceBasedTerraforming.desc": "하늘에 거대한 거울을 매달아 태양광 발전기의 효과를 상승시킵니다. 우주 거울을 해금합니다.",
     "policy.stoicism.label": "Stoïcisme",
-    "policy.stoicism.desc": "우리 스토아 학파는 불만 없이 고난을 받아들여야 한다고 가르칩니다. 사치 자원의 소비량이 절반으로 감소합니다.",
-    "policy.stripMining.label": "노천 채굴",
-    "policy.stripMining.desc": "광물 생산량을 향상시키기 위해 언덕을 갈아엎습니다.",
-    "policy.sustainability.label": "환경 지속 가능성",
-    "policy.sustainability.desc": "환경운동가들의 조언을 받기 시작합니다. 노천 채굴/개벌로 인한 행복도 페널티가 사라집니다.",
+    "policy.stoicism.desc": "Les stoïciens enseignent que l'on doit endurer sans se plaindre. Réduit de moitié la consommation des ressources rares.",
+    "policy.stripMining.label": "Minage intensif",
+    "policy.stripMining.desc": "Décapitez les collines dans le but d'améliorer votre production minérale.",
+    "policy.sustainability.label": "Durabilité",
+    "policy.sustainability.desc": "Commencez à écouter les conseils des écologistes, éliminant la pénalité de bonheur lié au minage à ciel ouvert/coupe rase et l'améliorant même grâce un avenir durable.",
     "policy.technocracy.label": "Technocracie",
     "policy.technocracy.desc": "과학자들이 정부를 차지합니다. 과학력 한도가 증가합니다.",
     "policy.theocracy.label": "L'Ordre des étoiles",
@@ -760,7 +760,7 @@
     "religion.adoreBtn.label": "은하계 숭배",
     "religion.adoreBtn.desc": "모든 숭배를 통찰로 변환합니다.\n이전 [신앙 초기화]",
     "religion.btn.sacrifice": "Sacrifice",
-    "religion.btn.refine": "정제",
+    "religion.btn.refine": "Rafine",
     "religion.faithCount.bonus": "bonus",
     "religion.faithCount.pool": "숭배: {0}",
     "religion.adore.confirmation.msg": "현재 누적된 모든 예배를 계시로 바꿉니까?\n\n계시의 총량에 따라 신앙을 변환(태양 숭배) 하는데 보너스를 얻습니다.\n\n계시와 신앙 보너스는 초기화 이후 이월됩니다.\n\n버튼을 클릭하면 현재 누적된 모든 예배와 태양 혁명 생산 보너스가 사라집니다.",
@@ -870,7 +870,7 @@
     "unit.day": "Jour",
     "unit.d": "일",
     "unit.year": "an",
-    "unit.y": "년",
+    "unit.y": "y",
     "res.effect": "Effet",
     "res.effects": "Effets",
     "res.netGain": "순 획득량",
@@ -1140,7 +1140,7 @@
     "science.navigation.effectDesc": "Permet la construction de navires marchands et débloque le commerce maritime.",
     "science.nuclearFission.label": "Fission Nucléaire",
     "science.nuclearFission.desc": "La Fission Nucléaire débloque les Réacteurs Nucléaires et les améliorations liées au nucléaire",
-    "science.nuclearFission.effectDesc": "핵 원자로와 핵 용기를 해금합니다.",
+    "science.nuclearFission.effectDesc": "Débloque les réacteurs nucléaires et les cuves de réacteur",
     "science.oilProcessing.label": "Raffinage du pétrole",
     "science.oilProcessing.desc": "Débloque de nouvelles méthodes de traitement du pétrole",
     "science.oilProcessing.effectDesc": "Débloque le kérosène et le traitement en usine",
@@ -1148,8 +1148,8 @@
     "science.orbitalEngineering.desc": "궤도 공학은 고양이 문명의 향상된 우주 프로젝트를 이끄는 역할을 합니다.",
     "science.orbitalEngineering.effectDesc": "허블 망원경과 우주 정거장을 해금합니다.",
     "science.paradoxalKnowledge.label": "Savoir paradoxal",
-    "science.paradoxalKnowledge.desc": "미정",
-    "science.paradoxalKnowledge.effectDesc": "시간 조작과 자원 수집기를 해금합니다.",
+    "science.paradoxalKnowledge.desc": "A déterminer",
+    "science.paradoxalKnowledge.effectDesc": "Débloque le Chronocontrôle et la récupération de ressources",
     "science.particlePhysics.label": "Physique des particules",
     "science.particlePhysics.desc": "입자 물리학은 그 근본인 핵 물리학보다 물질과 에너지의 본질에 대해 한 걸음 더 가까이 이해할 수 있게 인도합니다.",
     "science.particlePhysics.effectDesc": "Débloque les Accélérateurs de Particules, les Canons Électriques et l'Uranium Enrichi",
@@ -1451,8 +1451,8 @@
     "ui.log.link": "Journal",
     "ui.chat.link": "대화",
     "ui.clear.log": "Effacer le journal",
-    "ui.log.filters.block": "[<span id=\"filterIcon\">+</span>] 로그 필터",
-    "ui.pause": "일시 정지",
+    "ui.log.filters.block": "[<span id=\"filterIcon\">+</span>] Filtres des logs",
+    "ui.pause": "pause",
     "ui.unpause": "reprendre",
     "ui.pause.title": "게임 일시정지/진행",
     "ui.undo": "실행 취소 ({0}초)",
@@ -1656,8 +1656,8 @@
     "wipe.confirmation.title": "Confirmation d’annihilation",
     "wipe.confirmation.msg1": "Toutes les données sauvegardées vont être annihilées, confirmez-vous ?",
     "wipe.confirmation.msg2": "Votre confirmation est elle FERME ?",
-    "workshop.refine.confirmation": "Vos chatons vont MOURIR !",
-    "res.per.sec": "/초",
+    "workshop.refine.confirmation": "Tout vos chatons vont MOURIR",
+    "res.per.sec": "sec",
     "res.per.day": "jour",
     "res.per.year": "년",
     "res.energy.wt": "Wt",
@@ -1735,8 +1735,8 @@
     "workshop.alloySaw.desc": "Efficacité des scieries +15%",
     "workshop.alloyWarehouses.label": "Entrepôts en alliage",
     "workshop.alloyWarehouses.desc": "Stockage des ressources +45%",
-    "workshop.amBases.label": "반물질 기지",
-    "workshop.amBases.desc": "달 기지의 전력 소비량이 50% 감소합니다.",
+    "workshop.amBases.label": "Anti-matière combustible",
+    "workshop.amBases.desc": "Réduit l'énergie consommée par les bases lunaires de 50%",
     "workshop.amDrive.label": "Moteur à antimatière",
     "workshop.amDrive.desc": "반물질을 동력으로 하는 로켓 엔진",
     "workshop.amFission.label": "반물질 분열기",
@@ -1781,9 +1781,9 @@
     "workshop.coalFurnace.flavor": "따뜻하고... 졸리고...",
     "workshop.coldFusion.label": "Fusion Froide",
     "workshop.coldFusion.desc": "Augmente la production d'énergie des réacteurs de 25%",
-    "workshop.combustionEngine.label": "고압 기관",
-    "workshop.combustionEngine.desc": "증기기관의 석탄 소모량을 20% 감소시킵니다",
-    "workshop.combustionEngine.flavor": "더 나은 쥐덫",
+    "workshop.combustionEngine.label": "Moteur à haute pression",
+    "workshop.combustionEngine.desc": "Réduit la consommation de charbon des aciéries de 20%",
+    "workshop.combustionEngine.flavor": "Une meilleure souricière",
     "workshop.compositeBow.label": "Arc composite",
     "workshop.compositeBow.desc": "Une version améliorée de l'arc qui augmente de 50% la production de chaptitude",
     "workshop.concreteBarns.label": "Granges en béton",
@@ -1808,7 +1808,7 @@
     "workshop.crafts.beam.label": "Poutre de bois",
     "workshop.crafts.beam.desc": "Structure de support simple en bois. Requise pour les constructions avancées.",
     "workshop.crafts.bloodstone.label": "Pierre de Sang",
-    "workshop.crafts.bloodstone.desc": "고대 신들의 피와 시간으로 만들어졌다는 기묘한 보석.",
+    "workshop.crafts.bloodstone.desc": "Un étrange bijou prétendu être fait de temps et de sang de dieux anciens",
     "workshop.crafts.blueprint.label": "Plan",
     "workshop.crafts.blueprint.desc": "파란색 선이 그어진 이상한 종이쪼가리.",
     "workshop.crafts.compedium.label": "Encyclopédie",
@@ -1953,10 +1953,10 @@
     "workshop.printingPress.desc": "Les machines à vapeur impriment automatiquement des manuscrits",
     "workshop.pumpjack.label": "Pompe à pétrole",
     "workshop.pumpjack.desc": "Améliore l'efficacité des Puits de Pétrole de 45%. Chaque Puits de Pétrole consommera 1Wt/t.",
-    "workshop.pyrolysis.label": "열분해",
+    "workshop.pyrolysis.label": "Pyrolyse",
     "workshop.pyrolysis.desc": "La production de charbon est augmentée de 20%",
-    "workshop.qdot.label": "양자점 소자",
-    "workshop.qdot.desc": "태양 패널의 모든 계절에서의 효율이 약간 증가합니다.",
+    "workshop.qdot.label": "Cellule solaire à point quantique",
+    "workshop.qdot.desc": "Les panneaux solaires sont légèrement plus efficaces toute l'année",
     "workshop.railgun.label": "Canon électrique",
     "workshop.railgun.desc": "Arme électromagnétique très létale. Production de chaptitude +25%",
     "workshop.railgun.flavor": "Souris, prenez garde !",
@@ -1973,10 +1973,10 @@
     "workshop.reinforcedWarehouses.label": "Entrepôts renforcés",
     "workshop.reinforcedWarehouses.desc": "Stockage des ressources +25%",
     "workshop.relicStation.label": "Stations de Reliques",
-    "workshop.relicStation.desc": "우주 송신소를 유물 정거장으로 업그레이드 합니다. 유물 정거장은 사용된 유물을 매일 0.01씩 역공학합니다.",
-    "workshop.rotaryKiln.label": "회전식 가마",
-    "workshop.rotaryKiln.desc": "하소로의 철 생산 효율이 75% 증가하고 티타늄 생산량이 3배로 증가합니다.",
-    "workshop.satelliteRadio.label": "위성 라디오",
+    "workshop.relicStation.desc": "Améliorez les Balises Spatiales avec des stations de recherche sur les Reliques. Chaque station rétro-ingénierie les reliques, donnant 0.01 relique par jour",
+    "workshop.rotaryKiln.label": "Fourneau rotatif",
+    "workshop.rotaryKiln.desc": "Les fours à calcination sont 75% plus efficaces pour la production de fer et quatre fois plus efficaces pour la production de titane",
+    "workshop.satelliteRadio.label": "Radio Satellite",
     "workshop.satelliteRadio.desc": "Every satellite will boost the effect of Broadcast Towers by 0.5%",
     "workshop.satnav.label": "Navigation Satellite",
     "workshop.satnav.desc": "Chaque satellite réduit les coûts en cartes des navires de 1,25%",
