--- a/res/i18n/crowdin/pl.json
+++ b/res/i18n/crowdin/pl.json
@@ -170,7 +170,7 @@
     "buildings.observatory.flavor": "Kiedyś uda się złapać magiczną, czerwoną wróżkę.",
     "buildings.oilWell.label": "Szyb Naftowy",
     "buildings.oilWell.desc": "Produkuje olej, +1500 do limitu oleju.",
-    "buildings.oilWell.flavor": "Wstawaj wcześnie, pracuj ciężko, znajduj olej.",
+    "buildings.oilWell.flavor": "Kto rano wstaje, ten ropę dostaje.",
     "buildings.pasture.label": "Pastwisko",
     "buildings.pasture.desc": "Zapewnia alternatywne źródło żywności, przez co redukuje spożycie kocimiętki.",
     "buildings.pasture.flavor": "Może szklaneczkę mleka, Panie?",
@@ -822,13 +822,12 @@
     "religion.tu.blackNexus.flavor": "Oko na niebie.",
     "religion.tu.blackObelisk.label": "Czarny obelisk",
     "religion.tu.blackObelisk.desc": "Poprawia premię do wiary. <br /> Każdy Czarny Obelisk poprawi premię do poziomu transcendencji o 5%.",
-    "religion.tu.blackObelisk.flavor": "DZ",
     "religion.tu.blackRadiance.label": "Czarne Promieniowanie",
     "religion.tu.blackRadiance.desc": "Każdy procent BLS bardzo nieznacznie zwiększy współczynnik korupcji skrzydłorożca",
     "religion.tu.blackRadiance.flavor": "Jak tęcza w ciemności",
     "religion.tu.blazar.label": "Blazar",
     "religion.tu.blazar.desc": "Popraw struktury czasowe",
-    "religion.tu.blazar.flavor": "Tygrys Tygrys płonie jasno.",
+    "religion.tu.blazar.flavor": "Tygrysie, błysku w gąszczach mroku…",
     "religion.tu.darkNova.label": "Ciemna Gwiazda",
     "religion.tu.darkNova.desc": "Poprawia globalną produkcję energii o 2%",
     "religion.tu.darkNova.flavor": "Gwiazdy są martwe. Tak jak nasze nadzieje i marzenia.",
@@ -927,36 +926,36 @@
     "reset.confirmation.msg70": "Otrzymasz dodatkowe szczęście i bonus do produkcji.",
     "resources.alicorn.title": "skrzydłorożce",
     "resources.alloy.title": "Przetop",
-    "resources.antimatter.title": "Antymateria",
-    "resources.beam.title": "Belka",
+    "resources.antimatter.title": "antymateria",
+    "resources.beam.title": "belka",
     "resources.blackcoin.title": "czarnogrosz",
     "resources.bloodstone.title": "krwawy kamień",
-    "resources.blueprint.title": "Plan",
+    "resources.blueprint.title": "projekt",
     "resources.burnedParagon.title": "Spalony Paragon",
     "resources.catnip.title": "kocimiętka",
-    "resources.coal.title": "Węgiel",
-    "resources.compedium.title": "Kompendium",
-    "resources.concrate.title": "Beton",
+    "resources.coal.title": "węgiel",
+    "resources.compedium.title": "kompendium",
+    "resources.concrate.title": "beton",
     "resources.craftTable.all": "wszystko",
-    "resources.culture.title": "Kultura",
-    "resources.elderBox.desc": "stare pudełko!",
+    "resources.culture.title": "kultura",
+    "resources.elderBox.desc": "Wesołych Świąt!",
     "resources.elderBox.title": "Starsze pudełko",
     "resources.eludium.title": "Eludium",
     "resources.faith.title": "wiara",
     "resources.furs.title": "Futro",
     "resources.gear.title": "Zębatka",
-    "resources.gold.title": "Złoto",
+    "resources.gold.title": "złoto",
     "resources.iron.title": "żelazo",
-    "resources.ivory.title": "Kość słoniowa",
+    "resources.ivory.title": "kość słoniowa",
     "resources.karma.title": "Karma",
     "resources.kerosene.title": "nafta oczyszczona",
     "resources.kittens.title": "kotki",
-    "resources.manpower.title": "Kocia moc",
+    "resources.manpower.title": "siła robocza",
     "resources.manuscript.title": "Manuskrypt",
     "resources.megalith.title": "megalit",
     "resources.minerals.title": "minerały",
-    "resources.necrocorn.title": "Nekrorożec",
-    "resources.oil.title": "Olej",
+    "resources.necrocorn.title": "martworożce",
+    "resources.oil.title": "ropa",
     "resources.paragon.title": "Paragon",
     "resources.parchment.title": "Pergamin",
     "resources.plate.title": "Blacha",
@@ -1456,7 +1455,7 @@
     "ui.option.scheme": "Motyw graficzny:",
     "ui.option.scheme.relock": "Odblokuj motywy",
     "ui.option.scheme.tip": "Motywy, których nie możesz jeszcze wybrać, mogą być trwale odblokowane przez konkretne działania.",
-    "ui.option.workers": "Użyj sieciowego silnika\n<i>(gra działa poprawnie w zakładce tle, może powodować problemy z wydajnością)<br>Musisz odświeżyć stronę przeglądarki, aby to ustawienie zaczęło obowiązywać.</i>",
+    "ui.option.workers": "Uruchamiaj silnik gry w osobnym wątku (web worker)\n<i>(gra działa poprawnie w karcie w tle, ale może powodować problemy z wydajnością)<br>Musisz odświeżyć stronę w przeglądarce, aby to ustawienie zaczęło obowiązywać.</i>",
     "ui.option.force.high.precision": "Użyj wysokiej dokładności dla wartości zasobów",
     "ui.option.use.per.second.values": "Użyj wartości na sekundę <i>(inaczej co tick)</i>",
     "ui.option.use.percentage.resource.values": "Użyj wartości procentowych produkcji zasobów",
@@ -1598,7 +1597,7 @@
     "village.new.bloodstone": "Twoi myśliwi przynieśli ci dziwny prezent",
     "village.new.one.unicorn": "Złapałeś jednorożca!",
     "village.new.many.unicorns": "złapałeś {0} jednorożców!",
-    "village.panel.census": "Spis Kotków",
+    "village.panel.census": "Spis powszechny",
     "village.panel.management": "Zarządzanie",
     "village.panel.management.desc": "Szczęście wpływa na produkcję zasobów przez kotki i konsumpcję kocimiętki.<br />Rzadkie zasoby zwiększają tę wartość, a przeludnienie ją zmniejsza.",
     "village.reassign.msg": "Twoje kotki zostały ponownie przypisane w zależności od ich umiejętności.",
@@ -1642,7 +1641,6 @@
     "village.trait.scientist": "Naukowiec",
     "village.trait.wise": "Filozof",
     "void.spaceCathedral.label": "Katedra Kosmiczna",
-    "void.spaceCathedral.desc": "Do przyszłego ustalenia.",
     "wipe.confirmation.title": "Potwierdzenie wyczyszczenia",
     "wipe.confirmation.msg1": "Wszystkie zapisane dane zostaną ZNISZCZONE, czy jesteś pewien?",
     "wipe.confirmation.msg2": "Czy jesteś ABSOLUTNIE pewien?",
@@ -1755,7 +1753,7 @@
     "workshop.cadSystems.label": "System CAD",
     "workshop.cadSystems.desc": "Wszystkie budynki naukowe poprawią efektywność tworzenia planów",
     "workshop.caravanserai.label": "Karawanseraj",
-    "workshop.caravanserai.desc": "Twoje punkty handlowe mają bardzo niewielki wpływ na pozycję wyścigu",
+    "workshop.caravanserai.desc": "Twoje punkty handlowe mają bardzo niewielki wpływ na pozycję pośród ras",
     "workshop.caravanserai.flavor": "Aaaaaatrakcyjne kotki zatrudnię",
     "workshop.cargoShips.label": "Statek Towarowy",
     "workshop.cargoShips.desc": "Każdy statek daje premię 1% do pojemności portu",
