--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -537,6 +537,7 @@
     "effectsMgr.statics.tectonicBonus.title": "Tectonic bonus",
     "effectsMgr.statics.temporalFluxProduction.title": "Temporal Flux production",
     "effectsMgr.statics.temporalFluxProductionChronosphere.title": "Chronosphere's temporal flux production",
+    "effectsMgr.statics.temporalParadoxChance.title": "Temporal paradox chance",
     "effectsMgr.statics.temporalParadoxDay.title": "Day in temporal paradox",
     "effectsMgr.statics.temporalParadoxDayBonus.title": "Day in temporal paradox",
     "effectsMgr.statics.temporalParadoxVoid.title": "Max void",
