Tweak descriptions a bit

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -205,7 +205,7 @@
     "buildings.solarfarm.label": "Solar Farm",
     "buildings.solarfarm.desc": "Provides an additional source of energy depending on the seasons.",
     "buildings.spaceport.label": "Spaceport",
-    "buildings.spaceport.desc": "Increases the storage capacity of buildings in space by 1%, but consumes starcharts for each building affected.  Does not affect science or antimatter.",
+    "buildings.spaceport.desc": "Increases the storage capacity of buildings in space by 1%. Does not affect science or antimatter.",
     "buildings.spaceport.flavor": "I want the fancy yarn imported from Yarn.",
     "buildings.steamworks.label": "Steamworks",
     "buildings.steamworks.desc": "When active, significantly reduces your coal production. Does nothing useful by default, but can do a lot of cool stuff once upgraded.",
@@ -381,6 +381,7 @@
     "effectsMgr.statics.crackerRatio.title": "Cracker bonus",
     "effectsMgr.statics.craftRatio.title": "Craft bonus",
     "effectsMgr.statics.cryochamberSupport.title": "Cryochamber support",
+    "effectsMgr.statics.cryostationStorageBonus.title": "Cryostation capacity bonus",
     "effectsMgr.statics.cryostation-coalMax.title": "Cryostation - Max Coal",
     "effectsMgr.statics.cryostation-ironMax.title": "Cryostation - Max Iron",
     "effectsMgr.statics.cryostation-mineralsMax.title": "Cryostation - Max Minerals",
@@ -461,6 +462,7 @@
     "effectsMgr.statics.manuscriptCost.title": "Manuscript {0} cost",
     "effectsMgr.statics.maxKittens.title": "Kittens",
     "effectsMgr.statics.maxKittensRatio.title": "Max kittens ratio",
+    "effectsMgr.statics.moonBaseStorageBonus.title": "Moon Base capacity bonus",
     "effectsMgr.statics.moonOutpost-unobtainiumPerTickSpace.title": "Lunar Outpost - Unobtainium conversion",
     "effectsMgr.statics.mysticismBonus.title" : "Mysticism Bonus",
     "effectsMgr.statics.necrocornPerDay.pact.title": "Necrocorn consumption",
@@ -479,6 +481,7 @@
     "effectsMgr.statics.pactGlobalResourceRatio.title": "Storage per pyramid",
     "effectsMgr.statics.pollutionRatio.title": "Pollution production",
     "effectsMgr.statics.policyFakeBought.title": "1.25 policy cost multiplier",
+    "effectsMgr.statics.planetCrackerStorageBonus.title": "Planet Cracker capacity bonus",
     "effectsMgr.statics.planetCracker-uraniumPerTickSpace.title": "Planet Cracker - Uranium conversion",
     "effectsMgr.statics.priceRatio.title": "Building's prices",
     "effectsMgr.statics.prodTransferBonus.title": "Transferred cath production bonus",
