--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -213,6 +213,7 @@
     "buildings.spaceport.flavor": "I want the fancy yarn imported from Yarn.",
     "buildings.steamworks.label": "Steamworks",
     "buildings.steamworks.desc": "When active, significantly reduces your coal production. Does nothing useful by default, but can do a lot of cool stuff once upgraded.",
+    "buildings.steamworks.desc.automation": "Automation crafts some materials if they're at the limit.",
     "buildings.steamworks.flavor": "I just nap here and it looks like I'm working",
     "buildings.brewery.label": "Brewery",
     "buildings.brewery.desc": "Brew catnip into a spicy drink. Boosts festival effects.",
