--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -140,6 +140,7 @@
     "buildings.broadcasttower.desc": "Generates culture and happiness. More effective with high energy production.",
     "buildings.calciner.label": "Calciner",
     "buildings.calciner.desc": "A highly effective source of metal. Consumes 1.5 minerals and 0.02 oil per tick. Produces iron and a small amount of titanium",
+    "buildings.calciner.desc.automation": "Automation converts {0}% of iron output into steel.",
     "buildings.chapel.label": "Chapel",
     "buildings.chapel.desc": "Produces a bit of culture and faith per tick. May be improved with religious upgrades",
     "buildings.chronosphere.label": "Chronosphere",
@@ -148,6 +149,7 @@
     "buildings.dataCenter.desc": "Increases total effect of compendia on your max science",
     "buildings.factory.label": "Factory",
     "buildings.factory.desc": "Improves craft effectiveness",
+    "buildings.factory.desc.automation": "Automation cleans pollution from the air.",
     "buildings.field.label": "Catnip Field",
     "buildings.field.desc": "Plant some catnip to grow in the village. Fields have +50% production in Spring and -75% production in Winter",
     "buildings.field.flavor": "'Nip as far as the eye can see.",
@@ -187,6 +189,7 @@
     "buildings.observatory.flavor": "Yearning to one day catch the red light fairy",
     "buildings.oilWell.label": "Oil Well",
     "buildings.oilWell.desc": "Produces a bit of oil, +1500 to maximum oil limit",
+    "buildings.oilWell.desc.automation": "Automation consumes energy for more oil production.",
     "buildings.oilWell.flavor": "Rise early, work hard, strike oil.",
     "buildings.pasture.label": "Pasture",
     "buildings.pasture.desc": "Provides an alternative source of food, which reduces catnip consumption.",
@@ -196,6 +199,7 @@
     "buildings.quarry.flavor": "It's full of mice! Wait, wrong 'quarry'",
     "buildings.reactor.label": "Reactor",
     "buildings.reactor.desc": "Provides a 5% boost to production while active. Requires uranium to operate.",
+    "buildings.reactor.desc.automation": "Automation consumes thorium to produce more energy.",
     "buildings.reactor.flavor": "Glowing mice are much easier to catch!",
     "buildings.refineCatnip.label": "Refine catnip",
     "buildings.refineCatnip.desc": "Refine catnip into catnip wood",
@@ -204,8 +208,12 @@
     "buildings.smelter.flavor": "Watch your whiskers!",
     "buildings.solarfarm.label": "Solar Farm",
     "buildings.solarfarm.desc": "Provides an additional source of energy depending on the seasons.",
+    "buildings.spaceport.label": "Spaceport",
+    "buildings.spaceport.desc": "Increases the storage capacity of buildings in space. Does not affect science or antimatter.",
+    "buildings.spaceport.flavor": "I want the fancy yarn imported from Yarn.",
     "buildings.steamworks.label": "Steamworks",
     "buildings.steamworks.desc": "When active, significantly reduces your coal production. Does nothing useful by default, but can do a lot of cool stuff once upgraded.",
+    "buildings.steamworks.desc.automation": "Automation crafts some materials if they're at the limit.",
     "buildings.steamworks.flavor": "I just nap here and it looks like I'm working",
     "buildings.brewery.label": "Brewery",
     "buildings.brewery.desc": "Brew catnip into a spicy drink. Boosts festival effects.",
@@ -275,6 +283,10 @@
     "calendar.year.full": "Year {0} - {1}, day {2}",
     "calendar.year.tooltip": "Year:",
 
+    "challendge.effects.show.label": "Show Challenge effects",
+    "challendge.effects.toggle.desc": "Toggle the summary of all the effects of your Challenges.",
+    "challendge.effects.hide.label": "Hide Challenge effects",
+    "challendge.effects.panel.label": "Effects of {0} Challenge",
     "challendge.panel.label": "Challenges",
     "challendge.pending": "Pending",
     "challendge.reclaimReserves.label": "Reclaim reserves",
@@ -310,7 +322,7 @@
     "challendge.reservesReclaimed.msg": "Reserves were reclaimed!",
     "challendge.winterIsComing.label": "Winter Has Come",
     "challendge.winterIsComing.desc": "Restart the game with only winter seasons. (Catnip will not benefit from paragon production bonus)<br><br>Goal: Get to Helios.",
-    "challendge.winterIsComing.effect.desc": "Warm seasons are more likely, and cold seasons are less likely.",
+    "challendge.winterIsComing.effect.desc": "No more cold winters.",
     "challendge.btn.chronosphere.desc": " You won't gain reset bonus from chronospheres at the start of the next run. Instead resources will be put into reserves.",
     "challendge.btn.chronosphere.with.ironWill.desc": " You won't gain reset bonus from chronospheres.<br>WARNING: the reset bonus from chronospheres will automatically disable IW.",
     "challendge.btn.confirmation.title": "Challenge confirmation",
@@ -352,6 +364,7 @@
     "effectsMgr.statics.boostFromLeader.title": "Boost From Leader",
     "effectsMgr.statics.breweryConsumptionRatio.title": "Brewery consumption ratio",
     "effectsMgr.statics.broadcastTowerRatio.title": "Broadcast Tower bonus",
+    "effectsMgr.statics.bskSattelitePenalty.title": "Satellite base penalty",
     "effectsMgr.statics.cadBlueprintCraftRatio.title": "Blueprint craft bonus",
     "effectsMgr.statics.calcinerRatio.title": "Calciner bonus",
     "effectsMgr.statics.calcinerSteelCraftRatio.title": "Steel Plants's Calciner bonus",
@@ -374,6 +387,7 @@
     "effectsMgr.statics.crackerRatio.title": "Cracker bonus",
     "effectsMgr.statics.craftRatio.title": "Craft bonus",
     "effectsMgr.statics.cryochamberSupport.title": "Cryochamber support",
+    "effectsMgr.statics.cryostationStorageBonus.title": "Cryostation capacity bonus",
     "effectsMgr.statics.cryostation-coalMax.title": "Cryostation - Max Coal",
     "effectsMgr.statics.cryostation-ironMax.title": "Cryostation - Max Iron",
     "effectsMgr.statics.cryostation-mineralsMax.title": "Cryostation - Max Minerals",
@@ -424,6 +438,7 @@
     "effectsMgr.statics.harborRatio.title": "Harbor ship expansion",
     "effectsMgr.statics.hashrate.title": "Hashrate",
     "effectsMgr.statics.hashrateLevel.title": "Hashrate level",
+    "effectsMgr.statics.heatEfficiency.title": "Heat transfer efficiency",
     "effectsMgr.statics.heatMax.title": "Max heat",
     "effectsMgr.statics.heatMaxExpansion.title": "Max heat expansion",
     "effectsMgr.statics.heatPerTick.title": "Heat transfer",
@@ -453,6 +468,7 @@
     "effectsMgr.statics.manuscriptCost.title": "Manuscript {0} cost",
     "effectsMgr.statics.maxKittens.title": "Kittens",
     "effectsMgr.statics.maxKittensRatio.title": "Max kittens ratio",
+    "effectsMgr.statics.moonBaseStorageBonus.title": "Moon Base capacity bonus",
     "effectsMgr.statics.moonOutpost-unobtainiumPerTickSpace.title": "Lunar Outpost - Unobtainium conversion",
     "effectsMgr.statics.mysticismBonus.title" : "Mysticism Bonus",
     "effectsMgr.statics.necrocornPerDay.pact.title": "Necrocorn consumption",
@@ -471,6 +487,7 @@
     "effectsMgr.statics.pactGlobalResourceRatio.title": "Storage per pyramid",
     "effectsMgr.statics.pollutionRatio.title": "Pollution production",
     "effectsMgr.statics.policyFakeBought.title": "1.25 policy cost multiplier",
+    "effectsMgr.statics.planetCrackerStorageBonus.title": "Planet Cracker capacity bonus",
     "effectsMgr.statics.planetCracker-uraniumPerTickSpace.title": "Planet Cracker - Uranium conversion",
     "effectsMgr.statics.priceRatio.title": "Building's prices",
     "effectsMgr.statics.prodTransferBonus.title": "Transferred cath production bonus",
@@ -558,7 +575,7 @@
     "effectsMgr.statics.uraniumRatio.title": "Uranium savings",
     "effectsMgr.statics.voidResonance.title": "Order of the Void bonus",
     "effectsMgr.statics.warehouseRatio.title": "Warehouse expansion",
-    "effectsMgr.statics.weaponEfficency.title": "Weapon efficency",
+    "effectsMgr.statics.weaponEfficency.title": "Weapon efficiency",
     "effectsMgr.statics.woodJobRatio.title": "Woodcutter tools",
     "effectsMgr.statics.zebraAppeasedGoldPenalty.title" : "Gold penalty",
     "effectsMgr.statics.zebraPreparations.title": "Zebra Preparation",
@@ -772,7 +789,7 @@
     "policy.republic.label" : "Republic",
     "policy.republic.desc" : "Best for large societies. Highly promoted leaders will provide a small bonus to the production of all kittens.",
     "policy.siphoning.label" : "Siphoning",
-    "policy.siphoning.desc" : "Pacts consume alicorns and slow down production instead of consuming necrocorns. If there is not enough of either pacts also consume necrocorns.",
+    "policy.siphoning.desc" : "Pacts consume alicorns and slow down corruption instead of consuming necrocorns. Lack of alicorns or corruption is compensated by consuming necrocorns.",
     "policy.socialism.label" : "Socialism",
     "policy.socialism.desc" : "Has no effect",
     "policy.spaceBasedTerraforming.label" : "Space-based terraforming",
@@ -1029,6 +1046,7 @@
     "res.effect": "Effect",
     "res.effects": "Effects",
     "res.netGain": "Net gain",
+    "res.netGainPerDay": "Net delta per day",
     "res.notify.msg": "You will be notified when {0} will be available.",
     "res.notify.ready.title": "Enough resource to buy",
     "res.notify.ready": "The {0} is ready",
@@ -1177,8 +1195,8 @@
     "science.acoustics.label": "Acoustics",
     "science.acoustics.desc": "Acoustics is the study of sound. Though not obviously useful, in a long run it may benefit civilizations thriving for cultural and religious development.",
     "science.acoustics.effectDesc": "Unlocks Chapels",
-    "science.advExogeology.label": "Advanced Exogeology",
-    "science.advExogeology.desc": "Advanced Exogeology studies new methods of unobtainium processing",
+    "science.advExogeology.label": "Exometallurgy",
+    "science.advExogeology.desc": "Exometallurgy studies new methods of unobtainium processing",
     "science.advExogeology.effectDesc": "Unlocks Eludium and Eludium upgrades",
     "science.agriculture.label": "Agriculture",
     "science.agriculture.desc": "The basis of all civilised life, Agriculture allows the working of land for food. Agriculture can significantly improve your food production.",
@@ -1474,6 +1492,7 @@
     "space.yarnMission.desc": "Yarn is a class M planet with high moderate climate, seas and oxygen atmosphere.",
 
     "stats.buildings": "Buildings Constructed",
+    "stats.challenges.total": "Challenges Completed",
     "stats.clicks.total": "Total Clicks",
     "stats.crafts.current": "Crafting Times",
     "stats.crafts.total": "Crafting Times",
@@ -1489,6 +1508,7 @@
     "stats.time.current": "Time Played",
     "stats.trades.current": "Trades Completed",
     "stats.trades.total": "Trades Completed",
+    "stats.transcendenceTier": "Transcendence Tier",
     "stats.unicorns": "Unicorns Sacrificed",
     "stats.years.total": "Total Years Played",
 
@@ -1510,6 +1530,7 @@
     "time.AccelerateTimeBtn.tooltip.accelerated": "Accelerated time flow",
     "time.cfu.blastFurnace.label": "Chrono Furnace",
     "time.cfu.blastFurnace.desc": "Operates on chronoheat. Increases the maximum heat limit by 100.",
+    "time.cfu.blastFurnace.desc2": "Automation skips one year into the future for each 100% of fuel consumed.",
     "time.cfu.ressourceRetrieval.label": "Resource Retrieval",
     "time.cfu.ressourceRetrieval.desc": "Retrieve part of your yearly resources when you burn TC",
     "time.cfu.temporalAccelerator.label": "Temporal Accelerator",
@@ -1519,6 +1540,7 @@
     "time.cfu.temporalBattery.desc": "Improves your flux energy capacity by 25%",
     "time.cfu.temporalPress.label": "Temporal Press",
     "time.cfu.temporalPress.desc": "Allows for fine tuning of shattering",
+    "time.cfu.temporalPress.desc.automation": "Automation tweaks the custom shatter amount.",
     "time.cfu.temporalImpedance.label": "Time Impedance",
     "time.cfu.temporalImpedance.desc": "Delay effect of Dark Future temporal penalty by 1000 years.",
     "time.cfu.timeBoiler.label": "Time Boiler",
@@ -1570,7 +1592,7 @@
     "trade.msg.elders.departed": "Elder gods have departed",
     "trade.msg.elders.displeased": "Elder gods are displeased",
     "trade.msg.elders.feed": "Feed elders",
-    "trade.msg.elders.feed.desc": "Offer a sacrifice to the elders",
+    "trade.msg.elders.feed.desc": "Offer a sacrifice to the elders.<br>If they like your offering, it will increase trade amounts by 2% and convince the elders to stay longer in the future.",
     "trade.msg.elders.pleased": "Elder gods are pleased",
     "trade.msg.emissary": "An emissary of {0} comes to your village",
     "trade.msg.resources": "You've got {0} {1}",
@@ -1613,6 +1635,7 @@
     "trade.correct.bcoin": "There was a huge crypto market correction",
     "trade.embassy.label":"Embassy",
     "trade.embassy.desc": "Improve your diplomatic relationships by establishing an embassy",
+    "trade.embassy.chance": "Chance to get resources",
     "trade.embassy.pinned": "Pinned",
     "trade.embassy.unpinned": "Unpinned",
 
